# Bitcoin_rules

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REFERENCES.md  REFERENCE_RUST.md  ROADMAP.md  ROADMAP_OPS.md  diesel.toml  notes.md
.cargo/: config  config.toml
.github/: FUNDING.yml
.github/workflows/: build_test.yml  ci.yml  release.yml
book/: README.md  book.toml
book/src/: SUMMARY.md  addresses.md  bips.md  curiosities.md  ecdsa.md  history.md  introduction.md  symbols.md
br_cli/: Cargo.toml
br_cli/src/: command_line.rs  main.rs
br_cli/src/cli/: command_line.rs
br_lib/: Cargo.toml
br_lib/benches/: README.md
br_lib/tests/: verify_difficulty_vs_bc.rs
br_node/: Cargo.toml
br_node/migrations/2024-07-06-073840_create_headers/: up.sql
br_node/src/: config.rs  connection.rs  connection_context.rs  custom_log.rs  environment.rs  handshake_state.rs  internal_message.rs  main.rs  network.rs  node_listener.rs  node_message.rs  remote_node.rs  remote_nodes_orchestrator.rs  timechain_synchronyzer.rs  utils.rs
br_node/src/database/: mod.rs  models.rs  postgres_repository.rs  repository.rs  schema.rs
br_node/src/message/: get_headers.rs  mod.rs  pong.rs  verack.rs  version.rs  version_message.rs
cli/: Cargo.toml
cli/src/: command_line.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/bitcoin/: address_prefix.rs  ecdsa.rs  mod.rs
core/src/block/: header.rs
core/src/chain/: header.rs
core/src/cli/: logo.rs
core/src/ecdsa/: field_element.rs
core/src/hashing/: hash256.rs  mod.rs  sha1.rs  sha256.rs
core/src/keys/: key.rs  signature.rs
core/src/merkle/: tree.rs
core/src/network/: command.rs  fee_filter.rs  get_header.rs  network_message.rs  ping.rs  pong.rs
core/src/scripting/: mod.rs  opcode_fn.rs  script_lang.rs  standard.rs  token.rs
core/src/std_lib/: base58.rs  integer_extended.rs  varint.rs  vector.rs
core/src/transaction/: script.rs  tx.rs  tx_in.rs  tx_ins.rs  tx_lib.rs
core/src/wallet/: key.rs
core/tests/: verify_difficulty_vs_bc.rs
core/tests/fixtures/: blocks.py  difficulty_by_block.py  import_blocks_from_bc_node.py  requirements.txt
images/: bitcoin_rules.xcf
node/: Cargo.toml
node/migrations/2024-07-06-073840_create_headers/: down.sql
node/src/: custom_log.rs  environment.rs  internal_message.rs  main.rs  node_listener.rs  remote_node.rs  remote_nodes_orchestrator.rs  timechain_synchronyzer.rs  utils.rs
node/src/database/: models.rs  postgres_repository.rs  repository.rs
node/src/message/: get_headers.rs  pong.rs  verack.rs  version.rs
src/: base_encoding.rs  btc_ecdsa.rs  encoding.rs  field_element.rs  hash160.rs  hash256.rs  hashing.rs  helper.rs  integer_ex.rs  lib.rs  main.rs  point.rs  private_key.rs  s256.rs  s256field.rs  script_pub_key.rs  script_sig.rs  signature.rs  tx.rs  varint.rs
src/bitcoin/: address_prefix.rs  compression.rs  ecdsa.rs  ecdsa_btc.rs  mod.rs  network.rs
src/block/: header.rs
src/chain/: block.rs  header.rs  mod.rs  transaction.rs  tx.rs
src/ecdsa/: field_element.rs  point.rs
src/encoding/: base58.rs  mod.rs  varint.rs
src/flags/: mod.rs  sighash.rs
src/hashing/: hash160.rs  hash256.rs  mod.rs  ripemd160.rs  sha1.rs  sha256.rs
src/images/: elliptic.gnuplot
src/keys/: key.rs  key_error.rs  mod.rs  private_key.rs  signature.rs  verification.rs
src/lib/: integer_ex.rs
src/low/: integer_ex.rs  (+1 more)
test/: generate_blocks.py
tests/: verify_difficulty_vs_bc.rs
tools/: README.md  bits_to_target_gen.py  blockstream.api.rest  difficulty_by_block.csv  difficulty_by_block.py  getblock  getblockchaininfo  getblockhash  gettxout  import_blocks_from_bc_node.py  node.rest  opcodes_gen.py  readme.md  requirements.txt  str_to_command_hex.py
(+91 files in other folders)
