[package]
name = "bitcoin_rules"
version = "0.0.1"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
hmac = "0.12"
log = "0.4"
once_cell = "1.17"
ripemd = "0.1"
rug = "1.19"
sha1 = "0.10"
sha2 = "0.10"
