[package]
name = "brc"
version = "0.0.1"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brl = { path = "../br_lib" }
log = "0.4"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
