[package]
name = "brn"
version = "0.0.1"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brl = { path = "../br_lib" }
confy = "0.6.1"
env_logger = "0.11.3"
log = "0.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }
