[package]
name = "brn"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brl = { path = "../br_lib" }
confy = "0.6.1"
diesel = { version = "2.2", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = { version = "0.4", features = ["kv"] }
rug = "1.19"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
mockall = "0.12.1"
