[package]
name = "core"
version = "0.0.1"
edition = "2021"
rust-version = "1.96"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.13"
log = "0.4.30"
once_cell = "1.21.4"
regex = "1.12.3"
ripemd = "0.2.0"
rug = "1.30.0"
sha1 = "0.11.0"
sha2 = "0.11.0"

[target.'cfg(windows)'.dependencies]
gmp-mpfr-sys = { version = "1", features = ["use-system-libs"] }
