[package]
name = "node"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
confy = "0.6.1"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = { version = "0.4", features = ["kv"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
tokio = { version = "1.36", features = ["full"] }
diesel = { version = "2.2", features = ["postgres"] }

[dev-dependencies]
mockall = "0.12.1"
