[package]
name = "node"
version = "0.0.1"
edition = "2021"
rust-version = "1.96"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
confy = "2.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = { version = "0.4.30", features = ["kv"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
tokio = { version = "1.52.3", features = ["full"] }
diesel = { version = "2.3.9", features = ["postgres"] }

[dev-dependencies]
mockall = "0.14.0"
